--- a/client/src/assets/css/template.css
+++ b/client/src/assets/css/template.css
@@ -473,3 +473,14 @@ footer.sticky-footer {
   color: #a8abaf;
   border-color: #a8abaf;
 }
+
+.keyword-badge {
+  border: 1px solid #e1e8ed;
+  border-radius: 5px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
